--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <ul class="folders-list">
                     <li>
                         <i class="fas fa-folder"></i>
-                        <span>Жесть</span>
+                        <span>загрузка...</span>
                         <div class="folder-actions">
                             <button class="btn-icon" aria-label="Редактировать"><i class="fas fa-pencil-alt"></i></button>
                             <button class="btn-icon" aria-label="Удалить"><i class="fas fa-trash"></i></button>
@@ -128,10 +128,10 @@
                         </div>
                     <div class="header-right">
                         <button class="btn btn-header btn-new-chat-header" aria-label="Новый чат">
-                            <i class="fas fa-comment-dots"></i><span class="btn-text-desktop">New chat</span>
+                            <i class="fas fa-comment-dots"></i><span class="btn-text-desktop">Новый чат</span>
                         </button>
                         <button class="btn btn-header btn-settings-header" aria-label="Настройки">
-                            <i class="fas fa-sliders-h"></i><span class="btn-text-desktop">Settings</span>
+                            <i class="fas fa-sliders-h"></i><span class="btn-text-desktop">Настройки</span>
                         </button>
                     </div>
                 </header>
@@ -197,7 +197,7 @@
                                 <button class="btn-icon action-btn" id="chatActionBtn" aria-label="Чат"><i class="fas fa-comment-dots"></i></button>
                                 <button class="btn-icon action-btn" id="imageActionBtn" aria-label="Изображение"><i class="fas fa-image"></i></button>
                                 <button class="btn-icon action-btn" id="codeActionBtn" aria-label="Код"><i class="fas fa-code"></i></button>
-                                <button class="btn-icon action-btn" id="webSearchBtn" aria-label="Веб"><i class="fas fa-globe"></i></button>
+                                <button class="btn-icon action-btn" id="webSearchBtn" aria-label="Веб"><i class="fas fa-hourglass-half"></i></button>
                             </div>
                             <div class="pro-features">
                                 <a href="#" class="upgrade-to-pro-link"><span class="pro-link-text">Улучшить до Pro</span></a>
@@ -231,7 +231,7 @@
                         </select>
                     </div>
                     <div class="setting-item toggle-item">
-                        <label for="web-enabled">Веб включен</label>
+                        <label for="web-enabled">Delay включен</label>
                         <label class="switch">
                             <input type="checkbox" id="web-enabled" checked>
                             <span class="slider round"></span>
